api:feat: Added Person module and related changes to @repo/shared-api and schema migration
